[gd_scene load_steps=7 format=3 uid="uid://r3r0d86iwqxa"]

[ext_resource type="Script" path="res://_previous/entities/mining_machine.gd" id="1_u4rql"]
[ext_resource type="Script" path="res://scenes/entity_manager/components/fuel_power_timer.gd" id="2_8064y"]
[ext_resource type="Script" path="res://scenes/entity_manager/components/fuel_delivery.gd" id="3_ot5ed"]
[ext_resource type="Script" path="res://scenes/entity_manager/components/craft_timer.gd" id="3_q7y2w"]
[ext_resource type="Script" path="res://scenes/entity_manager/components/power_connector.gd" id="4_8pf2t"]
[ext_resource type="Script" path="res://scenes/entity_manager/components/craft_component.gd" id="4_u7cmm"]

[node name="MiningMachine" type="Node2D"]
script = ExtResource("1_u4rql")

[node name="FuelComponent" type="Node" parent="." node_paths=PackedStringArray("fuel_power_timer")]
unique_name_in_owner = true
script = ExtResource("3_ot5ed")
fuel_power_timer = NodePath("FuelPowerTimer")

[node name="FuelPowerTimer" type="Timer" parent="FuelComponent"]
unique_name_in_owner = true
script = ExtResource("2_8064y")

[node name="CraftComponent" type="Node" parent="." node_paths=PackedStringArray("craft_timer")]
unique_name_in_owner = true
script = ExtResource("4_u7cmm")
craft_timer = NodePath("CraftTimer")

[node name="CraftTimer" type="Timer" parent="CraftComponent"]
unique_name_in_owner = true
script = ExtResource("3_q7y2w")
crafting_speed = 0.25

[node name="PowerConnector" type="Node" parent="CraftComponent/CraftTimer" node_paths=PackedStringArray("fuel_power_timer")]
script = ExtResource("4_8pf2t")
fuel_power_timer = NodePath("../../../FuelComponent/FuelPowerTimer")
